--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     </head>
     <body>
         <script type="text/javascript">
-            var str = "('()', [['(', ')']])";
-            var strlengeth=str.length;
-            alert (strlengeth);
+            var str = "('()', [['(', ')']])";//строка
+            var strlengeth=str.length; //длина строки
+            //alert (strlengeth);//вывод длины строки
+            //alert(x);
+            //цикл передачи символов строки в массив
+            //i=0;
+            //while(i<=strlengeth){
+          //      mass_str[i] =str.charAt(i);
+            //  i++;
+               
+           // }
+          //var mass_str[0] =str.charAt(0);
+         //  allert(str.charAt(0));
 
+          // var str = '';
+for (var i = 0; i <= strlengeth; i++) {
+   var mass_str = [str.charAt(i)];
+}
+//alert( mass_str );
+//alert( str.charAt(0) );
+alert (str.charAt(strlengeth));
+alert (strlengeth);
+           
         </script>
     </body>
 </html>
