feat: create menu

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -12,10 +12,10 @@
         <div class="logo">
             <h3><span class="logo-neutron">neutron</span><span class="logo-mail">Mail</span></h3>
             <div class="interface-menu">
-                <a href="#"><span class="selected">English</span></a>
-                <a href="#">French</a>
-                <a href="#">Italia</a>
-                <a href="#">Polish</a>
+                <p><a href="#"><span class="selected">English</span></a> /
+                    <a href="#">French</a> /
+                    <a href="#">Italia</a> /
+                    <a href="#">Polish</a></p>
             </div>
         </div>
         <nav>
